--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tum.theShop</groupId>
-    <artifactId>theShop</artifactId>
+    <groupId>com.tum.theshop</groupId>
+    <artifactId>theshop</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>theShop-webapp</module>
+        <module>theshop-webapp</module>
     </modules>
 
     <parent>
